fix weird height issue causing overflow part 2

--- a/ui/css/properties/property-card.css
+++ b/ui/css/properties/property-card.css
@@ -1,6 +1,6 @@
 .property-card-wrapper {
     width: 10.3vw;
-    height: 12.5vw;
+    min-height: 12.5vw;
 
     margin-right: 1vw;
         
